Fixes population/shape evolution

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1339,6 +1339,7 @@ arb:
     expression: "اسلوب للتعبير"
     extension: "التوسع" #?
     # external: "Externe"
+    # extjuncted: "Extjuncted"
     # failed_attempts: "Tentatives de connexions échouées"
     family: "وحدة قياس"
     family_label: "وحدة قياس" #?
