--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -664,6 +664,7 @@ fra:
     exportable_columns: "Colonnes exportables"
     expression: "Expression" #?
     external: "Externe"
+    extjuncted: "Extjuncted"
     failed_attempts: "Tentatives de connexions échouées"
     family: "Famille"
     father: "Père"
