--- a/config/locales/fra/prints/animal_list.xml
+++ b/config/locales/fra/prints/animal_list.xml
@@ -4,10 +4,10 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="288"/>
 	<template><![CDATA["/home/djoulin/ekylibre/config/corporate-identity/reports-style.jrtx"]]></template>
-	<style name="Title" fontName="DejaVu Sans" fontSize="30" isBold="true" pdfFontName="Times-Bold"/>
-	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
-	<style name="Column header" forecolor="#666666" fontName="DejaVu Sans" fontSize="12" isBold="true"/>
-	<style name="Detail" fontName="Arial" fontSize="12">
+	<style name="Title" fontName="Open Sans" fontSize="30" isBold="true" pdfFontName="Open Sans"/>
+	<style name="SubTitle" forecolor="#736343" fontName="Open Sans" fontSize="18"/>
+	<style name="Column header" forecolor="#666666" fontName="Open Sans" fontSize="12" isBold="true"/>
+	<style name="Detail" fontName="Open Sans" fontSize="12">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$F{dead-at} != null]]></conditionExpression>
 			<style mode="Transparent" forecolor="#FF3333" fill="Solid" vAlign="Top" isBold="false" isItalic="false" isUnderline="false"/>
@@ -100,7 +100,7 @@
 				<staticText>
 					<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="10" y="10" width="121" height="20"/>
 					<textElement verticalAlignment="Middle">
-						<font fontName="DejaVu Sans"/>
+						<font fontName="Open Sans"/>
 					</textElement>
 					<text><![CDATA[Total naissance :]]></text>
 				</staticText>
@@ -120,14 +120,14 @@
 			<staticText>
 				<reportElement uuid="5b202e71-e4a3-4be8-8dcb-f735cc04164a" style="strong" mode="Opaque" x="2" y="29" width="800" height="2" backcolor="#7C9DDD"/>
 				<textElement verticalAlignment="Middle">
-					<font pdfFontName="Times-Roman"/>
+					<font pdfFontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[]]></text>
 			</staticText>
 			<staticText>
 				<reportElement uuid="dc35e306-d03e-4288-b40e-74e3bb33d471" style="title" x="0" y="0" width="425" height="29"/>
 				<textElement>
-					<font fontName="Open Sans" size="16" pdfFontName="Times-Roman"/>
+					<font fontName="Open Sans" size="16" pdfFontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[Inventaire animal]]></text>
 			</staticText>
@@ -266,7 +266,7 @@
 			<staticText>
 				<reportElement uuid="3740387f-1656-45d4-b5a7-a671b9df52d6" style="strong" mode="Opaque" x="117" y="13" width="591" height="2" backcolor="#7C9DDD"/>
 				<textElement verticalAlignment="Middle">
-					<font pdfFontName="Times-Roman"/>
+					<font pdfFontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[]]></text>
 			</staticText>
@@ -282,7 +282,7 @@
 			<staticText>
 				<reportElement uuid="6a745fd5-25a2-4de3-87b6-1d920ef1a4c0" style="strong" mode="Opaque" x="117" y="13" width="591" height="2" backcolor="#7C9DDD"/>
 				<textElement verticalAlignment="Middle">
-					<font pdfFontName="Times-Roman"/>
+					<font pdfFontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[]]></text>
 			</staticText>
@@ -447,14 +447,14 @@
 			<staticText>
 				<reportElement uuid="b004bfbd-c2d8-47f0-9929-ae1d9a6fd03b" style="sub-title" x="2" y="29" width="229" height="24" forecolor="#688ED8"/>
 				<textElement>
-					<font fontName="Open Sans" pdfFontName="Times-Roman"/>
+					<font fontName="Open Sans" pdfFontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[Naissance / sexe / an]]></text>
 			</staticText>
 			<staticText>
 				<reportElement uuid="b004bfbd-c2d8-47f0-9929-ae1d9a6fd03b" style="sub-title" positionType="Float" stretchType="RelativeToBandHeight" x="2" y="223" width="229" height="24" forecolor="#688ED8"/>
 				<textElement>
-					<font fontName="Open Sans" pdfFontName="Times-Roman"/>
+					<font fontName="Open Sans" pdfFontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[Naissance / race / an]]></text>
 			</staticText>
@@ -486,14 +486,14 @@
 			<staticText>
 				<reportElement uuid="898b506b-f8e9-4577-90d6-3887f2e6553a" style="strong" mode="Opaque" x="2" y="53" width="799" height="2" backcolor="#7C9DDD"/>
 				<textElement verticalAlignment="Middle">
-					<font pdfFontName="Times-Roman"/>
+					<font pdfFontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[]]></text>
 			</staticText>
 			<staticText>
 				<reportElement uuid="a5102868-7f30-42b0-8965-4bd359da71e6" style="strong" positionType="Float" mode="Opaque" x="2" y="247" width="800" height="2" backcolor="#7C9DDD"/>
 				<textElement verticalAlignment="Middle">
-					<font pdfFontName="Times-Roman"/>
+					<font pdfFontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[]]></text>
 			</staticText>
