--- a/README.rdoc
+++ b/README.rdoc
@@ -21,7 +21,7 @@ This installation method works with Debian-like OS (Debian, Ubuntu, Linux Mint..
 
 This a short explanation on installation steps for developers:
 * Before all, install all distribution dependencies:
-    sudo apt-get install postgresql-9.1 postgresql-server-dev-9.1 libpq-dev libqtwebkit-dev libmagic-dev libxml2-dev libxslt1-dev libgdal1-dev libjson0-dev zlib1g-dev build-essential wget openjdk-7-jdk imagemagick graphicsmagick tesseract-ocr tesseract-ocr-fra tesseract-ocr-eng tesseract-ocr-spa pdftk libreoffice poppler-utils poppler-data ghostscript
+    sudo apt-get install postgresql-9.1 postgresql-server-dev-9.1 libpq-dev libqtwebkit-dev libmagic-dev libxml2-dev libxslt1-dev libgdal1-dev libjson0-dev zlib1g-dev build-essential wget openjdk-7-jdk graphicsmagick tesseract-ocr tesseract-ocr-fra tesseract-ocr-eng tesseract-ocr-spa pdftk libreoffice poppler-utils poppler-data ghostscript
 * Install PostGIS (≥ 2.0) from source:
   * Download and install Geos (≥ 3.4) from http://trac.osgeo.org/geos:
       wget http://download.osgeo.org/geos/geos-3.4.2.tar.bz2
