--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -44,6 +44,8 @@ spa:
       # index: "Répartitions analytiques"
       # new: "Nouvelle répartition analytique"
       # show: "Répartition analytique"
+    backend/animal_foods:
+      # index: "Alimentation animale"
     backend/animal_groups:
       # edit: "Modifier le groupe d’animaux\_: %{name}"
       # index: "Groupes d’animaux"
@@ -54,6 +56,8 @@ spa:
       # index: "Produits vétérinaires"
       # new: "Nouveau produit vétérinaire"
       # show: "Produit vétérinaire\_: %{name}"
+    backend/animal_products:
+      # index: "Produits animaux"
     backend/animals:
       # edit: "Modifier l’animal\_: %{name}"
       # index: "Animaux"
@@ -431,7 +435,11 @@ spa:
       # change_password: "Changer de mot de passe"
       # show: "Mes informations"
       # statistics: "Mes statistiques"
-    backend/net_services: #?
+    backend/net_services:
+      # edit: "Modifier un service en ligne"
+      # index: "Services en ligne"
+      # new: "Nouveau service en ligne"
+      # show: "Service en ligne\_: %{name}"
     backend/observations:
       # edit: "Modifier une observation"
       # new: "Ajouter une observation"
@@ -477,11 +485,17 @@ spa:
       # new: "Nouvelle personne"
       # show: "Personne\_: %{full_name}"
     backend/places: #?
+    backend/plant_fertilizers:
+      # index: "Engrais"
     backend/plant_medicines:
       # edit: "Modifier le produit phytosanitaire\_: %{name}"
       # index: "Produits phytosanitaires"
       # new: "Nouveau produit phytosanitaire"
       # show: "Produit phytosanitaire\_: %{name}"
+    backend/plant_products:
+      # index: "Produits végétaux"
+    backend/plant_seedlings:
+      # index: "Plants et semences"
     backend/plants:
       # edit: "Modifier la culture\_: %{name}"
       # index: "Cultures"
@@ -1238,6 +1252,7 @@ spa:
     international_reduce_vat_collected: "Tasa réducida a 2,1%"
     international_vat_collected: "Operación realisada en los DOM"
     interval: "Intervalo personalisado"
+    # inventories: "Inventaires"
     inventory: "Completar el inventario"
     inventory_create: "Hacer un nuevo inventario" #?
     inventory_print: "Imprimir el inventario"
@@ -1369,7 +1384,7 @@ spa:
     monthly: "Mensual"
     # months: "Mois"
     # moved_at: "Fait le"
-    # movement: "Mouvements"
+    # movements: "Mouvements"
     moves: "Movimientos de depositos"
     my_company: "Coja las informaciones sobre su sociedad"
     my_self: "Coja sus informaciones"
