Renames remaining metonymic indicators terms in views

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -2063,7 +2063,7 @@ arb:
       one: "دفعة واحدة"
       other: "%{count} دفعات اخرى"
       zero: "ولااية دفعة"
-    x_indicators:
+    x_readings:
       # one: "%{count} indicateur"
       # other: "%{count} indicateurs"
       # zero: "0 indicateur"
