--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -1869,7 +1869,7 @@ spa:
       # one: "%{count} encaissement"
       # other: "%{count} encaissements"
       # zero: "0 encaissement"
-    x_indicators:
+    x_readings:
       # one: "%{count} indicateur"
       # other: "%{count} indicateurs"
       # zero: "0 indicateur"
