--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1848,7 +1848,7 @@ fra:
       one: "%{count} encaissement"
       other: "%{count} encaissements"
       zero: "0 encaissement"
-    x_indicators:
+    x_readings:
       one: "%{count} indicateur"
       other: "%{count} indicateurs"
       zero: "0 indicateur"
